--- a/styles/header.css
+++ b/styles/header.css
@@ -1,33 +1,27 @@
 .header {
-  padding-top: 146px;
+  padding-top: 30px;
+  padding-bottom: 25px;
 }
 
 .header__container {
-  position: relative;
-  min-height: 823px;
+  display: flex;
+  justify-content: space-between;
 }
 
-.header__container::after {
-  content: "";
-  display: block;
-  position: absolute;
-  width: 675px;
-  height: 762px;
-  bottom: 0;
-  right: 0;
-  background-image: url("../img/vr-man.png");
-  background-size: contain;
+.navigation__list {
+  display: flex;
+  justify-content: space-between;
+  gap: 40px;
 }
 
-.header__title {
-  font-size: 150px;
-  font-weight: 900;
-  line-height: 100%;
-  letter-spacing: -0.1em;
-}
-
-.header__tagline {
-  padding-left: 100px;
-  font-size: 28px;
-  line-height: 50px;
+.header__button {
+  padding: 12px 32px;
+  border: 3px solid #CD06FF;
+  border-radius: 10px;
+  font-weight: 700;
+  font-size: 22px;
+  line-height: 30px;
+  text-transform: uppercase;
+  color: #FFFFFF;
+  background-color: inherit;
 }
