--- a/styles/banner.css
+++ b/styles/banner.css
@@ -2,12 +2,12 @@
   padding-top: 25px;
 }
 
-.banner__content {
+.banner__container {
   position: relative;
   min-height: 823px;
 }
 
-.banner__content::after {
+.banner__container::after {
   content: "";
   display: block;
   position: absolute;
@@ -17,6 +17,10 @@
   right: 0;
   background-image: url("../img/vr-man.png");
   background-size: contain;
+}
+
+.banner__content {
+  margin-bottom: 40px;
 }
 
 .banner__title {
@@ -30,4 +34,37 @@
   padding-left: 100px;
   font-size: 28px;
   line-height: 50px;
+}
+
+.banner__list {
+  display: flex;
+  align-items: flex-end;
+  gap: 40px;
+}
+
+.banner__item {
+  flex-basis: 190px;
+  text-align: center;
+}
+
+.banner__subtitle {
+  font-weight: 900;
+  color: #CD06FF;
+  text-transform: uppercase;
+}
+
+.banner__subtitle_4 {
+  font-size: 100px;
+  line-height: 141px;
+}
+
+.banner__subtitle_new {
+  font-size: 75px;
+  line-height: 106px;
+}
+
+.banner__text {
+  font-weight: 400;
+  font-size: 30px;
+  line-height: 34px;
 }
