--- a/styles/footer.css
+++ b/styles/footer.css
@@ -1,62 +1,19 @@
 .footer {
-  padding-bottom: 100px;
+  padding-top: 78px;
+  padding-bottom: 10px;
 }
 
-.footer__list {
-  padding-left: 65px;
-  margin-bottom: 40px;
-  list-style-type: none;
+.footer__container {
+  display: flex;
+  justify-content: space-between;
+  font-size: 14px;
+  line-height: 16px;
 }
 
-.footer__item {
-  position: relative;
-  margin-bottom: 11px;
-  font-size: 24px;
-  font-weight: 700;
-  text-decoration: none;
+.footer__author {
+  text-align: right;
 }
 
-.footer__item:first-child {
-  margin-bottom: 38px;
-}
-
-.footer__item::before {
-  content: "";
-  position: absolute;
-  width: 35px;
-  height: 32px;
-  left: -60px;
-  background-repeat: no-repeat;
-}
-
-.footer__address::before {
-  background-image: url("../img/location.svg");
-}
-
-.footer__phone::before {
-  background-image: url("../img/phone-call.svg");
-}
-
-.footer__email::before {
-  background-image: url("../img/email.svg");
-}
-
-.footer__link {
-  color: inherit;
-  text-decoration: none;
-}
-
-.footer__social {
-  text-decoration: none;
-}
-
-.footer__media {
-  display: inline-block;
-  width: 48px;
-  height: 48px;
-  margin-right: 27px;
-}
-
-.footer__media:last-of-type {
-  margin-right: 0;
+.footer__design {
+  margin-bottom: 6px;
 }
