--- a/styles/rooms.css
+++ b/styles/rooms.css
@@ -1,11 +1,13 @@
 .rooms__list {
-  list-style-type: none;
+  display: flex;
+  justify-content: space-between;
+  row-gap: 20px;
+  flex-wrap: wrap;
 }
 
 .rooms__item {
-  display: inline-block;
-  padding-top: 135px;
-  width: 580px;
+  padding: 94px 164px;
+  flex-basis: 580px;
   height: 349px;
   background-size: contain;
   background-repeat: no-repeat;
@@ -14,14 +16,6 @@
   line-height: 80px;
   text-align: center;
   text-transform: uppercase;
-}
-
-.rooms__item:nth-child(odd) {
-  margin-right: 14px;
-}
-
-.rooms__item:not(:last-child) {
-  margin-bottom: 20px;
 }
 
 .rooms__link {
