--- a/styles/header.css
+++ b/styles/header.css
@@ -6,6 +6,7 @@
 .header__container {
   display: flex;
   justify-content: space-between;
+  align-items: center;
 }
 
 .navigation__list {
@@ -17,11 +18,5 @@
 .header__button {
   padding: 12px 32px;
   border: 3px solid #CD06FF;
-  border-radius: 10px;
-  font-weight: 700;
-  font-size: 22px;
-  line-height: 30px;
-  text-transform: uppercase;
-  color: #FFFFFF;
   background-color: inherit;
 }
