--- a/styles/style.css
+++ b/styles/style.css
@@ -5,6 +5,7 @@
 @import "section.css";
 @import "subtitle.css";
 @import "header.css";
+@import "button.css";
 @import "banner.css";
 @import "rest.css";
 @import "main.css";
