--- a/styles/subtitle.css
+++ b/styles/subtitle.css
@@ -1,5 +1,7 @@
 .subtitle {
+  margin: 0 auto;
   margin-bottom: 40px;
+  max-width: 700px;
   font-size: 40px;
   font-weight: 700;
   line-height: 50px;
