--- a/styles/default.css
+++ b/styles/default.css
@@ -49,9 +49,14 @@ h2,
 h3,
 p,
 blockquote,
-figure,
-fieldset {
+figure {
   margin: 0;
+}
+
+fieldset {
+  padding: 0;
+  margin: 0;
+  border: none;
 }
 
 cite {
@@ -60,4 +65,14 @@ cite {
 
 section {
   clear: both;
+}
+
+input[type="time"]::-webkit-calendar-picker-indicator,
+input[type="date"]::-webkit-calendar-picker-indicator {
+  background: none;
+}
+
+input[type="date"]::-webkit-datetime-edit,
+input[type="time"]::-webkit-datetime-edit {
+  color: transparent; 
 }
