--- a/styles/booking.css
+++ b/styles/booking.css
@@ -38,20 +38,30 @@
 .booking__button-label {
   flex-basis: 250px;
   padding: 8px 0px;
+  border: 3px solid transparent;
   background-color: #fff;
   border-radius: 10px;
   font-weight: 700;
   font-size: 30px;
   line-height: 40px;
   color: #000000;
-  text-transform: uppercase;
-  text-align: center;
-  cursor: pointer;
 }
 
-.booking__input_no-radio {
-  margin-left: -13px;
-  visibility: hidden;
+.booking__button-label:hover {
+  border-color: #640AA3;
+  background-color: #EADEED;
+}
+
+.booking__button-label:focus {
+  border-color: #640AA3;
+  background-color: #fff;
+  color: #640AA3;
+}
+
+.booking__button-label:active {
+  border-color: #fff;
+  background-color: #6C0287;
+  color: white;
 }
 
 .booking__center-fieldsets {
@@ -77,14 +87,17 @@
   gap: 20px;
 }
 
-.booking__input_radio {
+.booking__radio,
+.booking__checkbox {
   margin-right: 12px;
+}
+
+.booking__radio {
   width: 27px;
   height: 27px;
 }
 
-.booking__input_checkbox {
-  margin-right: 12px;
+.booking__checkbox {
   width: 25px;
   height: 25px;
 }
@@ -92,6 +105,7 @@
 .booking__final {
   justify-content: space-between;
   align-items: flex-end;
+  gap: 40px;
 }
 
 .booking__block {
@@ -104,16 +118,7 @@
   flex-basis: 300px;
   flex-direction: row;
   flex-wrap: wrap;
-  column-gap: 32px;
-}
-
-.booking__inside-label {
-  position: relative;
-  top: 40px;
-  left: 20px;
-  font-size: 18px;
-  line-height: 28px;
-  color: #211E1E;
+  gap: 32px;
 }
 
 .booking__final-label {
@@ -123,17 +128,18 @@
   line-height: 16px;
 }
 
-.booking__input_text {
+.booking__input-text {
   display: block;
   height: 52px;
 }
 
-.booking__date-time {
+.booking__select {
   width: 134px;
+  height: 52px;
 }
 
-.booking__visitors {
-  width: 300px;
+.booking__select_big {
+  width: 100%;
 }
 
 .booking__date-time::after {
