--- a/styles/header.css
+++ b/styles/header.css
@@ -16,7 +16,19 @@
 }
 
 .header__button {
-  padding: 12px 32px;
+  flex-basis: 280px;
+  padding: 12px 0;
   border: 3px solid #CD06FF;
   background-color: inherit;
+}
+
+.header__button:hover,
+.header__button:focus {
+  border: none;
+  background-color: #6C0287;
+}
+
+.header__button:active {
+  border: 1px solid #000;
+  background-color: #640AA3;
 }
