--- a/styles/contact.css
+++ b/styles/contact.css
@@ -65,3 +65,27 @@
 .contact__media:last-of-type {
   margin-right: 0;
 }
+
+.contact__media-link {
+  display: block;
+  width: 50px;
+  height: 50px;
+  border-radius: 50%;
+  outline: 1px solid transparent;
+  outline-offset: 3px;
+  color: white;
+}
+
+.contact__media-link:hover {
+  color: #EADEED;
+}
+
+.contact__media-link:focus {
+  outline-color: #CD06FF;
+  color: #EADEED;
+}
+
+.contact__media-link:active {
+  outline-color: transparent;
+  color: #CD06FF;
+}
