--- a/styles/button.css
+++ b/styles/button.css
@@ -5,4 +5,6 @@
   line-height: 30px;
   color: #FFFFFF;
   text-transform: uppercase;
+  transition-duration: 0.3s;
+  transition-property: background-color, border-color;
 }
