--- a/styles/banner.css
+++ b/styles/banner.css
@@ -50,7 +50,7 @@
 
 .banner__subtitle {
   font-weight: 900;
-  color: #CD06FF;
+  color: var(--light-color);
   text-transform: uppercase;
 }
 
@@ -72,16 +72,16 @@
 
 .banner__button {
   padding: 25px 69px;
-  background-color: #6C0287;
+  background-color: var(--main-color)
 }
 
 .banner__button:hover,
 .banner__button:focus {
-  background-color: #840AA3;
+  background-color: var(--light-average-color);
 }
 
 .banner__button:active {
-  background-color: #640AA3;
+  background-color: var(--average-color);
 }
 
 .banner__next {
@@ -105,7 +105,7 @@
 }
 
 .banner__next:focus {
-  outline: 2px solid #CD06FF;
+  outline: 2px solid var(--light-color);
   outline-offset: 3px;
 }
 
