--- a/styles/booking.css
+++ b/styles/booking.css
@@ -1,7 +1,7 @@
 .booking {
   padding-top: 80px;
   padding-bottom: 80px;
-  background-color: #440F51;
+  background-color: var(--dark-color);
 }
 
 .booking__title {
@@ -48,19 +48,19 @@
 }
 
 .booking__button-label:hover {
-  border-color: #640AA3;
-  background-color: #EADEED;
+  border-color: var(--average-color);
+  background-color: var(--pale-color);
 }
 
 .booking__button-label:focus {
-  border-color: #640AA3;
+  border-color: var(--average-color);
   background-color: #fff;
   color: black;
 }
 
 .booking__button-label:active {
   border-color: #fff;
-  background-color: #6C0287;
+  background-color: var(--main-color);
   color: white;
 }
 
@@ -106,7 +106,7 @@
 
 .booking__radio:focus,
 .booking__checkbox:focus {
-  outline: 1px solid #CD06FF;
+  outline: 1px solid var(--light-color);
 }
 
 .booking__final {
@@ -143,7 +143,7 @@
 }
 
 .booking__input-text:focus {
-  border-color: #CD06FF;
+  border-color: var(--light-color);
 }
 
 .booking__select {
@@ -161,20 +161,20 @@
   width: 300px;
   border: 3px solid transparent;
   background-color: #fff;
-  color: #6C0287;
+  color: var(--main-color);
 }
 
 .booking__button:hover {
-  border-color: #6C0287;
-  background-color: #EADEED;
+  border-color: var(--main-color);
+  background-color: var(--pale-color);
 }
 
 .booking__button:focus {
-  border-color: #6C0287;
+  border-color: var(--main-color);
   background-color: #fff;
 }
 
 .booking__button:active {
   border-color: transparent;
-  background-color: #EADEED;
+  background-color: var(--pale-color);
 }
