--- a/styles/reviews.css
+++ b/styles/reviews.css
@@ -13,6 +13,25 @@
 }
 
 .reviews__photo {
+  display: inline-block;
+  position: relative;
+  line-height: 0;
+}
+
+.reviews__photo::after {
+  content: "";
+  display: block;    
+	width: 100%;
+	height: 100%;    
+	position: absolute;
+	top: 0;      
+	left: 0;   
+	background: transparent;
+	background-image: radial-gradient(50% 50% at 50% 50%, rgba(196, 196, 196, 0) 0%, rgba(108, 2, 135, 0.5) 100%);
+	border-radius: 140px;
+}
+
+.reviews__image {
   min-width: 280px;
 }
 
