--- a/styles/booking.css
+++ b/styles/booking.css
@@ -174,7 +174,6 @@
 .booking__button {
   position: relative;
   align-self: flex-end;
-  z-index: 2;
   padding: 11px 50px;
   width: 300px;
   height: 60px;
@@ -198,4 +197,66 @@
 .booking__button:active {
   border-color: transparent;
   background-color: var(--pale-color);
+}
+
+@media (max-width: 1280px) {
+  .booking {
+    padding: 60px 0;
+  }
+
+  .booking__title {
+    margin-bottom: 37px;
+  }
+
+  .booking__legend {
+    margin-bottom: 27px;
+  }
+
+  .booking__button-label {
+    flex-basis: 180px;
+    padding: 6px 0px;
+    border-radius: 5px;
+    font-size: 20px;
+    line-height: 24px;
+  }
+
+  .booking__fieldsets {
+    display: flex;
+    flex-direction: column;
+    margin: 0;
+    max-width: none;
+  }
+
+  .booking__fieldset_final {
+    margin-bottom: 50px;
+  }
+
+  .booking__legend_small-margin {
+    margin-bottom: 20px;
+  }
+
+  .booking__block {
+    gap: 9px;
+  }
+
+  .booking__block_row {
+    justify-content: space-between;
+    row-gap: 34px;
+  }
+  
+  .booking__final-label {
+    font-weight: 700;
+    font-size: 14px;
+  }
+  
+  .booking__input-text {
+    width: 251px;
+    height: 52px;
+  }
+  
+  .booking__button {
+    padding: 10px 38px;
+    width: 254px;
+    height: 50px;
+  }
 }
