--- a/styles/button.css
+++ b/styles/button.css
@@ -8,3 +8,10 @@
   transition-duration: 0.3s;
   transition-property: background-color, border-color;
 }
+
+@media (max-width: 1280px) {
+  .button {
+    font-size: 18px;
+    line-height: 24px;
+  }
+}
