--- a/styles/contact.css
+++ b/styles/contact.css
@@ -8,7 +8,7 @@
 }
 
 .contact__list {
-  padding-left: 65px;
+  padding-left: 60px;
   margin-bottom: 40px;
   list-style-type: none;
 }
@@ -31,7 +31,8 @@
   width: 35px;
   height: 32px;
   top: calc(50% - 16px);
-  left: -65px;
+  left: -60px;
+  background-size: contain;
   background-repeat: no-repeat;
 }
 
@@ -91,4 +92,57 @@
 .contact__media-link:active {
   outline-color: transparent;
   color: var(--light-color);
+}
+
+.contact__map {
+  background-size: cover;
+}
+
+@media (max-width: 1280px) {
+  .contact {
+    padding-bottom: 47px;
+  }
+  
+  .contact__content {
+    display: flex;
+    justify-content: space-between;
+  }
+  
+  .contact__list {
+    padding-left: 40px;
+    margin-bottom: 47px;
+  }
+  
+  .contact__item {
+    position: relative;
+    margin-bottom: 11px;
+    font-size: 24px;
+    font-weight: 700;
+    text-decoration: none;
+  }
+  
+  .contact__item:first-child {
+    margin-bottom: 54px;
+  }
+  
+  .contact__item::before {
+    width: 26px;
+    height: 26px;
+    top: calc(50% - 7px);
+    left: -40px;
+  }
+  
+  .contact__media {
+    margin-right: 12px;
+  }
+  
+  .contact__media-link {
+    width: 38px;
+    height: 38px;
+  }
+
+  .contact__map {
+    max-width: 542px;
+    height: 274px;
+  }
 }
