--- a/styles/navigation.css
+++ b/styles/navigation.css
@@ -9,3 +9,14 @@
   line-height: 50px;
   text-transform: uppercase;
 }
+
+@media (max-width: 1280px) {
+  .navigation__list {
+    gap: 20px;
+  }
+
+  .navigation__link {
+    font-size: 18px;
+    line-height: 22px;
+  }
+}
