--- a/styles/reviews.css
+++ b/styles/reviews.css
@@ -43,3 +43,26 @@
 .reviews__review-text {
   padding-top: 52px;
 }
+
+@media (max-width: 1280px) {
+  .reviews__title {
+    margin-bottom: 20px;
+  }
+
+  .reviews__item {
+    margin-bottom: 40px;
+    gap: 38px;
+  }
+
+  .reviews__image {
+    min-width: 172px;
+  }
+
+  .reviews__photo {
+    margin-bottom: 23px;
+  }
+
+  .reviews__review-text {
+    padding-top: 40px;
+  }
+}
